--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* VARIABLES */
+:root {
+  --primary-color: #3626A7;
+  --secondary-color: #A594F9;
+  --main-bg-color: #f4f4f4;
+}
+
 /* RESETS */
 * {
   margin: 0;
@@ -7,6 +14,9 @@
 
 html, body {
   height: 100%;
+  background: var(--main-bg-color);
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -30,4 +40,39 @@ header {
 #view-scores {
   border: none;
   background: none;
+  color: var(--secondary-color);
 }
+
+/* MAIN */
+.main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.start-section h1 {
+  font-size: 3rem;
+  padding-top: 3rem;
+}
+
+.start-section p {
+  font-size: 1.5rem;
+  padding: 1rem 5rem;
+}
+
+.start-button {
+  font-size: 1rem;
+  background: var(--primary-color);
+  color: #fff;
+  padding: .75rem 1rem;
+  border: none;
+  border-radius: 10px;
+  transition: all .5s;
+}
+
+.start-button:hover {
+  background: var(--secondary-color);
+}
+
