--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,39 @@ header {
   background: var(--secondary-color);
 }
 
+/* QUESTION PAGE */
+.question-section {
+  display: flex;
+  flex-direction: column;
+  padding: 0 5% 0 20%;
+}
+
+.question-section h2 {
+  font-size: 2rem;
+  padding: 3rem 0 1rem 0;
+  text-align: left;
+}
+
+/* .answer-btn-container {
+  display: grid;
+  grid-template-columns: 1fr;
+} */
+
+.answer-btn {
+  color: #fff;
+  display: block;
+  background: var(--primary-color);
+  text-align: left;
+  border: none;
+  padding: .5rem 1rem .5rem .5rem;
+  margin: .25rem 0;
+  /* width: fit-content; */
+  font-size: 1rem;
+  border-radius: 5px;
+  transition: all .5s;
+}
+
+.answer-btn:hover {
+  background: var(--secondary-color);
+}
+
