--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ header {
   border: none;
   background: none;
   color: var(--secondary-color);
+  text-decoration: none;
 }
 
 /* START PAGE */
@@ -176,3 +177,30 @@ header {
   font-size: 1rem;
 }
 
+/* HIGH SCORES PAGE */
+.high-scores-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 5% 0 20%;
+}
+
+.high-scores-page h1 {
+  font-size: 2.5rem;
+  padding: 6rem 0 .5rem 0;
+  text-align: left;
+}
+
+.scores-button {
+  color: #fff;
+  font-size: 1rem;
+  background: var(--primary-color);
+  border: none;
+  border-radius: 5px;
+  padding: .2rem .5rem;
+  transition: background .5s;
+}
+
+.scores-button:hover {
+  background: var(--secondary-color);
+}
