--- a/css/style.css
+++ b/css/style.css
@@ -191,8 +191,9 @@ header {
   text-align: left;
 }
 
-.scores-button {
+.high-score-buttons button {
   color: #fff;
+  margin-top: .75rem;
   font-size: 1rem;
   background: var(--primary-color);
   border: none;
@@ -201,6 +202,17 @@ header {
   transition: background .5s;
 }
 
-.scores-button:hover {
+.high-score-buttons button:hover {
   background: var(--secondary-color);
+}
+
+.score-list {
+  width: 500px;
+}
+
+.score-list p {
+  background: #ccc;
+  font-size: 1.5rem;
+  padding-left: .5rem;
+  margin-bottom: .5rem;
 }
